# agent-rdp

./: .envrc  .gitignore  .npmignore  .release-please-manifest.json  CHANGELOG-rust.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  devbox.json  eslint.config.js  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: ci.yml  pages.yml  release-please.yml  release.yml
assets/viewer/: viewer.html
crates/agent-rdp/: Cargo.toml
crates/agent-rdp-daemon/: Cargo.toml
crates/agent-rdp-daemon/src/: daemon.rs  ipc_server.rs  lib.rs  rdp_session.rs  rdpdr_backend.rs  ws_input.rs  ws_server.rs
crates/agent-rdp-daemon/src/automation/: bootstrap.rs  dvc_channel.rs  dvc_ipc.rs  file_ipc.rs  mod.rs
crates/agent-rdp-daemon/src/automation/scripts/: PSScriptAnalyzerSettings.psd1  agent.ps1
crates/agent-rdp-daemon/src/automation/scripts/lib/: actions.ps1  dvc.ps1  selectors.ps1  snapshot.ps1  types.ps1
crates/agent-rdp-daemon/src/handlers/: automate.rs  clipboard.rs  connect.rs  drive.rs  keyboard.rs  locate.rs  mod.rs  mouse.rs  screenshot.rs  scroll.rs
crates/agent-rdp-daemon/src/ocr/: engine.rs  mod.rs
crates/agent-rdp-daemon/src/rdp_session/: clipboard.rs
crates/agent-rdp-daemon/src/rdpdr/: file_ops.rs  helpers.rs  mod.rs  query_ops.rs  set_ops.rs
crates/agent-rdp-protocol/: Cargo.toml
crates/agent-rdp-protocol/src/: automation.rs  lib.rs  request.rs  response.rs
crates/agent-rdp/src/: cli.rs  ipc_client.rs  main.rs  output.rs  session_manager.rs
crates/agent-rdp/src/cli/commands/: automate.rs  clipboard.rs  connect.rs  disconnect.rs  drive.rs  keyboard.rs  locate.rs  mod.rs  mouse.rs  screenshot.rs  scroll.rs  session.rs  view.rs  wait.rs
docs/: AUTOMATION.md  WEBSOCKET.md
examples/: README.md  demo-explorer.sh  list-drives.sh  open-explorer.sh
examples/scripts/: open-chrome-google.sh
examples/typescript/: hello-world.ts
examples/viewer/: viewer.html
scripts/: build-all.cjs  copy-native.cjs  copy-native.js  lint-ps1.ps1  postinstall.js  test-ps-fixtures.ps1
skills/agent-rdp/: SKILL.md
src/: automation.ts  client.ts  daemon.ts  index.ts  types.ts
