[package]
name = "agent-rdp-protocol"
description = "Protocol types for agent-rdp IPC communication"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
