[package]
name = "agent-rdp"
description = "CLI tool for AI agents to control Windows Remote Desktop sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "agent-rdp"
path = "src/main.rs"

[dependencies]
agent-rdp-daemon = { workspace = true }
agent-rdp-protocol = { workspace = true }

# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Image processing (for saving screenshots)
image = { workspace = true }
base64 = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Platform utilities
glob = { workspace = true }
shellexpand = "3"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
